package com.strategii;

import com.company.IAmenda;

public interface Strategie {
    boolean conditie(IAmenda amenda);
}
