package com.company;

public interface IAmenda {
    String getCNP();
    String getTipAmenda();
    double getAmendaCost();
    void printAmenda();
}
